Make PublicURLManager suspendable https://bugs.webkit.org/show_bug.cgi?id=141977 <rdar://problem/19923085>

Reviewed by Andreas Kling.

Source/WebCore:

Make PublicURLManager suspendable by overriding ActiveDOMObject::canSuspend()
and returning true. Nothing prevents suspending the PublicURLManager as its
implementation never causes JS to be executed. No implementation for
suspend() / resume() needs to be provided for the same reason.

The fact that PublicURLManager wasn't suspendable was preventing pages using
URL.createObjectURL() from entering the PageCache. Baidu.com search results
pages are using the API for example.

Test: fast/history/page-cache-createObjectURL.html

* html/PublicURLManager.cpp:
(WebCore::PublicURLManager::canSuspend):
* html/PublicURLManager.h:

LayoutTests:

Add a layout test to check that a page using URL.createObjectURL() API
can enter the PageCache.

* fast/history/page-cache-createObjectURL-expected.txt: Added.
* fast/history/page-cache-createObjectURL.html: Added.

* platform/wk2/TestExpectations:
  The new test is skipped on WK2 because WKTR does not support
  eventSender.beginDragWithFiles().


Canonical link: https://commits.webkit.org/160058@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@180646 268f45cc-cd09-0410-ab3c-d52691b4dbfc