Source/WebCore/html/PublicURLManager.cpp
@@ -80,4 +80,10 @@ void PublicURLManager::stop()
     m_registryToURL.clear();
 }
 
+bool PublicURLManager::canSuspend() const
+{
+    // Suspending an PublicURLManager is safe as it does not cause any JS to be executed.
+    return true;
 }
+
+} // namespace WebCore
